# SerialCommunication

./: CMakeLists.txt  README.md  serial_port_conf.yml
src/: commCtrl.cxx  commRecv.cxx  commSend.cxx
